tests/ui/const-generics/issues/issue-106423.stderr
error: overly complex generic constant
  --> $DIR/issue-106423.rs:13:39
   |
LL |     const INIT: [MaybeUninit<T>; N] = [Self::ELEM; N]; // important for optimization of `new`
   |                                       ^^^^^^^^^^^^^^^ array construction is not supported in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function
   = note: this operation may be supported in the future

error: aborting due to previous error

